--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
         <!-- Cards  -->
         <ul class="team-cards">
           <li>
-            <img src="./images/image.jpg" alt="first Member" width="270" />
+            <img src="images/image.jpg" alt="first Member" width="270" />
             <h3>Andrés Cubo</h3>
             <p>Diseñador de Productos</p>
             <ul>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-tehable"></use>
+                    <use href="images/SVG/icons.svg#icon-tehable"></use>
                   </svg>
                 </a>
               </li>
@@ -168,119 +168,119 @@
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                    <use href="images/SVG/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-linkedin-1"></use>
+                    <use href="images/SVG/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </li>
           <li>
-            <img src="./images/image (2).jpg" alt="first Member" width="270" />
+            <img src="images/image (2).jpg" alt="first Member" width="270" />
             <h3>Carla Palacios</h3>
             <p>Desarrolladora Frontend</p>
             <ul>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-tehable"></use>
+                    <use href="images/SVG/icons.svg#icon-tehable"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-facebook"></use>
+                    <use href="images/SVG/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                    <use href="images/SVG/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-linkedin-1"></use>
+                    <use href="images/SVG/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </li>
           <li>
-            <img src="./images/image (3).jpg" alt="first Member" width="270" />
+            <img src="images/image (3).jpg" alt="first Member" width="270" />
             <h3>Mario Dorado</h3>
             <p>Marketing</p>
             <ul>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-tehable"></use>
+                    <use href="images/SVG/icons.svg#icon-tehable"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-facebook"></use>
+                    <use href="images/SVG/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                    <use href="images/SVG/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-linkedin-1"></use>
+                    <use href="images/SVG/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </li>
           <li>
-            <img src="./images/image (4).jpg" alt="first Member" width="270" />
+            <img src="images/image (4).jpg" alt="first Member" width="270" />
             <h3>Pablo Mijangos</h3>
             <p>Diseñador IU </p>
             <ul>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-tehable"></use>
+                    <use href="images/SVG/icons.svg#icon-tehable"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-facebook"></use>
+                    <use href="images/SVG/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-twitter"></use>
+                    <use href="images/SVG/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#">
                   <svg class="icon">
-                    <use href="./images/SVG/icons.svg#icon-linkedin-1"></use>
+                    <use href="images/SVG/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
@@ -455,7 +455,7 @@
                   <button type="button" class="button">
                 <span class="button__label">Suscríbase</span>
                 <svg class="button__icon button__icon--end" width="20" height="20">
-                  <use href="/images/SVG/icons.svg#icon-enviar-cono"></use>
+                  <use href="images/SVG/icons.svg#icon-enviar-cono"></use>
                 </svg>
                 </button>
                 </div>
@@ -472,7 +472,7 @@
     <div class="modal">
       <button data-modal-close class="modal-close">
         <svg class="icon-close-modal">
-          <use href="./images/SVG/icons.svg#icon-Vector-5"></use>
+          <use href="images/SVG/icons.svg#icon-Vector-5"></use>
         </svg>
         </button>
         <h3>Deje sus datos, nos contactaremos con usted</h3>
@@ -481,7 +481,7 @@
           <div class="container-modal-group">
             <input type="name" name="name" class="linea" id="input-name" required>
             <svg class="icons-modal">
-              <use href="/images/SVG/icons.svg#icon-Vector-phone"></use>
+              <use href="images/SVG/icons.svg#icon-Vector-phone"></use>
             </svg>
           </div>
           <!-- Caja 2 -->
@@ -489,7 +489,7 @@
           <div class="container-modal-group">
             <input type="tel" name="tel" class="linea" id="input-tel" required>
             <svg class="icons-modal">
-              <use href="/images/SVG/icons.svg#icon-Vector-cell"></use>
+              <use href="images/SVG/icons.svg#icon-Vector-cell"></use>
             </svg>
           </div>
           <!-- Caja 3 -->
@@ -497,7 +497,7 @@
           <div class="container-modal-group">
             <input type="email" name="email" class="linea" id="input-email" required>
             <svg class="icons-modal">
-              <use href="/images/SVG/icons.svg#icon-Vector-gmail"></use>
+              <use href="images/SVG/icons.svg#icon-Vector-gmail"></use>
             </svg>
           </div>
           <!-- Caja -->
@@ -511,7 +511,7 @@
                 <input type="checkbox" id="input-accept" hidden name="accept-terms" required>
                 <span class="custom-checkmark">
                 <svg class="custom-checkmark-icon">
-                  <use href="./images/SVG/icons.svg#icon-Vector-check"></use>
+                  <use href="images/SVG/icons.svg#icon-Vector-check"></use>
                 </svg>
                 </span>
                 <span class="custom-text">Estoy de acuerdo con el boletín informativo y acepto los Términos y Condiciones</span>
