--- a/portafolio.html
+++ b/portafolio.html
@@ -292,7 +292,7 @@
                   <button type="button" class="button">
                 <span class="button__label">Suscríbase</span>
                 <svg class="button__icon button__icon--end" width="20" height="20">
-                  <use href="/images/SVG/icons.svg#icon-enviar-cono"></use>
+                  <use href="images/SVG/icons.svg#icon-enviar-cono"></use>
                 </svg>
                 </button>
                 </div>
